about page displays correctly on mobile

--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -88,7 +88,7 @@ gray {
 .wrap {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: fit-content;
 }
 
 
@@ -109,6 +109,10 @@ gray {
   .container {
     max-width: 32rem;
   }
+  .wrap {
+    height: 100%;
+  }
+
 }
 @media (min-width: 56em) {
   .container {
